<resources>
    <string name="app_name">Face Detection</string>
    <string name="CHOOSE_PRE_INSTALLED_MODEL_KEY">CHOOSE_PRE_INSTALLED_MODEL_KEY</string>
    <string name="ENABLE_CUSTOM_SETTINGS_KEY">ENABLE_CUSTOM_SETTINGS_KEY</string>
    <string name="MODEL_PATH_KEY">MODEL_PATH_KEY</string>
    <string name="LABEL_PATH_KEY">LABEL_PATH_KEY</string>
    <string name="IMAGE_PATH_KEY">IMAGE_PATH_KEY</string>
    <string name="CPU_THREAD_NUM_KEY">CPU_THREAD_NUM_KEY</string>
    <string name="CPU_POWER_MODE_KEY">CPU_POWER_MODE_KEY</string>
    <string name="INPUT_SHAPE_KEY">INPUT_SHAPE_KEY</string>
    <string name="INPUT_MEAN_KEY">INPUT_MEAN_KEY</string>
    <string name="INPUT_STD_KEY">INPUT_STD_KEY</string>
    <string name="MODEL_PATH_DEFAULT">models/facedetection_for_cpu</string>
    <string name="LABEL_PATH_DEFAULT">labels/labels.txt</string>
    <string name="IMAGE_PATH_DEFAULT">images/face.jpg</string>
    <string name="CPU_THREAD_NUM_DEFAULT">1</string>
    <string name="CPU_POWER_MODE_DEFAULT">LITE_POWER_HIGH</string>
    <string name="INPUT_SHAPE_DEFAULT">1,3,240,320</string>
    <string name="INPUT_MEAN_DEFAULT">0.498,0.498,0.498</string>
    <string name="INPUT_STD_DEFAULT">0.502,0.502,0.502</string>
</resources>
